--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.10.2",
     "axios": "^1.5.1",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
